--- a/Vendor.Web/appsettings.json
+++ b/Vendor.Web/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"VendorContext": "Server=(localdb)\\mssqllocaldb;Database=ShopperDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "VendorContext": "Server=tcp:shopper-development-db-server.database.windows.net,1433;Initial Catalog=shopper-development-db;Persist Security Info=False;User ID=sidharth;Password=Admin@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "VendorContext": "Server=(localdb)\\mssqllocaldb;Database=takku-local-db;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
     "Key": "ThisismySecretKeyPleaseDontChangeIt",
