--- a/Vendor.Web/appsettings.json
+++ b/Vendor.Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VendorContext": "Server=(localdb)\\mssqllocaldb;Database=takku-local-db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"VendorContext": "Server=(localdb)\\mssqllocaldb;Database=takku-local-db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "VendorContext": "Server=tcp:takku-development-db-server.database.windows.net,1433;Initial Catalog=takku-development-db;Persist Security Info=False;User ID=sidharth;Password=Admin@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "ThisismySecretKeyPleaseDontChangeIt",
